# edge-detection-opencv

./: CMakeLists.txt  LICENSE  README.md  detect.cpp  utils.cpp  utils.h
